--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,56 @@
+# ###################################################################### #
+#                                                                        #
+# █▀▄ █▄█ █▀█   █░█░█ █ █▀█ ▄▀█ █▄░█ ▄▀█ ▀█▀ ▄▀█   █▀▄▀█ █░█ █░░ █▄█ ▄▀█ #
+# █▄▀ ░█░ █▄█   ▀▄▀▄▀ █ █▀▄ █▀█ █░▀█ █▀█ ░█░ █▀█   █░▀░█ █▄█ █▄▄ ░█░ █▀█ #
+#                                                                        #
+#                         CodeIgniter 4 Favicons                         #
+#           https://github.com/dyonmulya/codeigniter4-favicons           #
+#                                                                        #
+#                  Copyright (c) 2025 Dyo Wiranata Mulya                 #
+#                                                                        #
+#         LICENSE file in the root directory of this source tree.        #
+#                                                                        #
+# ###################################################################### #
+
+
+#-------------------------
+# Operating Specific Junk Files
+#-------------------------
+
+# OS X
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# OS X Thumbnails
+._*
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# Linux
+*~
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
 */config/development
 */logs/log-*.php
 !*/logs/index.html
@@ -6,6 +59,9 @@
 !*/cache/index.html
 !*/cache/.htaccess
 
+#-------------------------
+# User Guide Temp Files
+#-------------------------
 user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
@@ -16,3 +72,48 @@ application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
 /vendor/
+
+#-------------------------
+# Composer
+#-------------------------
+composer.lock
+vendor/
+
+#-------------------------
+# IDE / Development Files
+#-------------------------
+
+# Modules Testing
+_modules/*
+
+# phpenv local config
+.php-version
+
+# Jetbrains editors (PHPStorm, etc)
+.idea/
+*.iml
+
+# NetBeans
+/nbproject/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+/nbactions.xml
+/nb-configuration.xml
+/.nb-gradle/
+
+# Sublime Text
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+*.sublime-workspace
+*.sublime-project
+.phpintel
+/api/
+
+# Visual Studio Code
+.vscode/
+
+/results/
+/phpunit*.xml
